--- a/devinmajordotcom/Views/Home/_Apps.cshtml
+++ b/devinmajordotcom/Views/Home/_Apps.cshtml
@@ -1,17 +1,17 @@
 ﻿@using devinmajordotcom.Helpers;
-@model List<devinmajordotcom.ViewModels.SiteLinkViewModel>
+@model devinmajordotcom.ViewModels.MainLandingPageViewModel
 <div class="inner cover" id="home">
 
-    <h1 class="cover-heading">Welcome, Fellow Humans!</h1>
+    <h1 class="cover-heading">@Model.Config.AppsTitle</h1>
     <hr>
-    <p class="lead" style="color: #71cef5;">You've reached the coolest corner of the Internet!</p>
-    <p>Feel free to click one of the applications below for more fun... you never know what you'll find!</p>
+    <p class="lead" style="color: #71cef5;">@Model.Config.AppsIntro</p>
+    <p>@Model.Config.AppsDescription</p>
     <hr>
     <br />
 
-    @if (Model.Count > 0)
+    @if (Model.LandingPageApplicationLinks.Count > 0)
     {
-        foreach (var link in Model.OrderBy(x => x.Order))
+        foreach (var link in Model.LandingPageApplicationLinks.Where(x => x.IsEnabled).OrderBy(x => x.Order))
         {
             <div class="col-md-4 col-sm-4">
                 @Html.Raw(Html.ActionLink("REPLACE", link.Action, link.Controller, null, new { @class = "appLink" }).ToHtmlString().Replace("REPLACE", PartialHelper.RenderViewToString(this.ViewContext, "_MainApplicationLinkContent", link)))
