--- a/devinmajordotcom/Views/Home/_ContactContent.cshtml
+++ b/devinmajordotcom/Views/Home/_ContactContent.cshtml
@@ -1,50 +1,12 @@
-﻿@model devinmajordotcom.ViewModels.ContactEmailViewModel
+﻿@model devinmajordotcom.ViewModels.MainLandingPageViewModel
 
 <div style="display:none;" class="inner cover" id="contact">
 
-    <h2 class="title"><strong>Drop Me a Line</strong></h2>
+    <h2 class="title"><strong>@Model.Config.ContactTitle</strong></h2>
     <hr>
-    <p style="color: #71cef5;">If you'd like excusive access to any of the services here (Plex, Custom Home, etc.), then feel free to send me a quick message, and I'll take it from there!</p>
+    <p style="color: #71cef5;">@Model.Config.ContactInstructions</p>
     <hr>
-    @using (Ajax.BeginForm("DropMeALine", "Home", new AjaxOptions { HttpMethod = "Post", OnSuccess = "AjaxSuccess(data)", OnFailure = "AjaxFailure(data)" }, new { @id = "dropMeALineEmailForm" }))
-    {
-
-        @Html.AntiForgeryToken() 
-
-        @Html.HiddenFor(x => x.RecipientEmail)
-        @Html.HiddenFor(x => x.RecipientName)
-
-        <div class="row">
-            <div class="col-sm-6">
-                @Html.TextBoxFor(x => x.SenderName, new { @class = "form-control", @placeholder="Your Name" })
-            </div>
-            <div class="col-sm-6">
-                @Html.TextBoxFor(x => x.SenderEmailAddress, new { @class = "form-control", @placeholder = "Your Email" })
-            </div>
-        </div>
-        <br />
-
-        <div class="row">
-            <div class="col-sm-12">
-                @Html.TextBoxFor(x => x.Subject, new { @class = "form-control", @placeholder = "Your Subject" })
-            </div>
-        </div>
-        <br />
-
-        <div class="row">
-            <div class="col-sm-12">
-                @Html.TextAreaFor(x => x.Content, new { @class = "form-control", @placeholder = "Your Very Important Message", @rows="6" })
-            </div>
-        </div>
-        <br />
-
-
-        <div class="row">
-            <div class="col-sm-offset-2 col-sm-8">
-                <input class="form-control" id="sendEmail" type="submit" value="SHOOT ME AN EMAIL">
-            </div>
-        </div>
-        <br />
-    }
+    
+    @Html.Partial("_ContactEmailForm", Model.ContactEmailData)
 
 </div>
