--- a/devinmajordotcom/Views/MediaDashboard/Index.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/Index.cshtml
@@ -2,9 +2,10 @@
 @model devinmajordotcom.ViewModels.MediaDashboardViewModel
 @{
     Layout = "../Shared/_MediaLayout.cshtml";
+    ViewBag.ControllerName = ViewBag.ControllerName;
 }
 
-<div class="wrapper">
+<div id="wrapper" class="wrapper">
 
     <nav id="sidebar" class="active text-center">
 
@@ -20,47 +21,111 @@
 
         <!-- Sidebar Links -->
         <ul class="list-unstyled components menu">
+
             @if (Model.SidebarLinks.Count > 0)
             {
-                foreach (var sidebarLink in Model.SidebarLinks.Where(x => x.IsEnabled))
+                if (Model.CurrentUserViewModel.UserIsAdmin)
                 {
-                    <li data-newtitle="@sidebarLink.DisplayName" @if(sidebarLink.IsDefault) {<text>class="active"</text>}>
-                        <a href="#" data-framename="@sidebarLink.ID">
-                            <i class="fa @sidebarLink.DisplayIcon"></i>
-                            <span class="displayName">@sidebarLink.DisplayName</span>
-                        </a>
-                    </li>
+                    foreach (var sidebarLink in Model.SidebarLinks.Where(x => x.IsEnabled))
+                    {
+                        <li data-type="link" data-newtitle="@sidebarLink.DisplayName" @if (sidebarLink.IsDefault) { <text> class="active" </text> }>
+                            <a href="#" data-framename="@sidebarLink.ID">
+                                <i class="fa @sidebarLink.DisplayIcon"></i>
+                                <span class="displayName">@sidebarLink.DisplayName</span>
+                            </a>
+                        </li>
+                    }
+                }
+                else
+                {
+                    foreach (var sidebarLink in Model.SidebarLinks.Where(x => x.IsEnabled && x.IsPublic))
+                    {
+                        <li data-type="link" data-newtitle="@sidebarLink.DisplayName" @if (sidebarLink.IsDefault) { <text> class="active" </text> }>
+                            <a href="#" data-framename="@sidebarLink.ID">
+                                <i class="fa @sidebarLink.DisplayIcon"></i>
+                                <span class="displayName">@sidebarLink.DisplayName</span>
+                            </a>
+                        </li>
+                    }
                 }
             }
+
+            @if (Model.CurrentUserViewModel.UserIsAdmin)
+            {
+                var link = Html.ActionLink("REPLACE", "AdminLogout", "MediaDashboard").ToHtmlString();
+                var cleanLink = link.Replace("REPLACE", "<i class='glyphicon glyphicon-log-out'></i><span class='displayName'>Log Out</span>");
+                <li data-newtitle="Log Out">
+                    @Html.Raw(cleanLink)
+                </li>
+            }
+            else
+            {
+                
+                <li id="mainLogin" data-newtitle="Log In">                  
+                    <a>
+                        <i class="glyphicon glyphicon-log-in"></i>
+                        <span class="displayName">Log In</span>
+                    </a>
+                </li>
+            }
+
         </ul>
-        <button type="button" class="btn btn-info navbar-btn sidebarCollapse" >
+
+        <button type="button" class="btn btn-info navbar-btn sidebarCollapse">
             <span class="glyphicon glyphicon-resize-full"></span>
         </button>
+
     </nav>
 
     <div id="content">
         @if (Model.SidebarLinks.Count > 0)
         {
             var count = 0;
-            foreach (var link in Model.SidebarLinks.Where(x => x.IsEnabled))
+            if (Model.CurrentUserViewModel.UserIsAdmin)
             {
-                if (link.URL != null)
+                foreach (var link in Model.SidebarLinks.Where(x => x.IsEnabled))
                 {
-                    <iframe src="@Model.SidebarLinks[count].URL"
-                            style="width: 100%; min-height: 100%; z-index: -1; border: none; @if (!Model.SidebarLinks[count].IsDefault) { <text>display:none;</text> }"
-                            id="@Model.SidebarLinks[count].ID"
-                            scrolling="auto"
-                            sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
-                            allowfullscreen="true"
-                            webkitallowfullscreen="true"
-                            class="z-iframe"
-                            frameborder="0"></iframe>
+                    if (link.URL != null)
+                    {
+                        <iframe src="@Model.SidebarLinks[count].URL"
+                                style="width: 100%; min-height: 100%; z-index: -1; border: none; @if (!Model.SidebarLinks[count].IsDefault) { <text>display:none;</text> }"
+                                id="@Model.SidebarLinks[count].ID"
+                                scrolling="auto"
+                                sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
+                                allowfullscreen="true"
+                                webkitallowfullscreen="true"
+                                class="z-iframe"
+                                frameborder="0"></iframe>
+                    }
+                    else
+                    {
+                        //TODO: Add something here, preferably make use of Controller/Action variables
+                    }
+                    count++;
                 }
-                else
+            }
+            else
+            {
+                foreach (var link in Model.SidebarLinks.Where(x => x.IsEnabled && x.IsPublic))
                 {
-                    //TODO: Add something here, preferably make use of Controller/Action variables
+                    if (link.URL != null)
+                    {
+                        <iframe src="@Model.SidebarLinks[count].URL"
+                                style="width: 100%; min-height: 100%; z-index: -1; border: none; @if (!Model.SidebarLinks[count].IsDefault) { <text>display:none;</text> }"
+                                id="@Model.SidebarLinks[count].ID"
+                                scrolling="auto"
+                                sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
+                                allowfullscreen="true"
+                                webkitallowfullscreen="true"
+                                class="z-iframe"
+                                frameborder="0"></iframe>
+                    }
+                    else
+                    {
+                        //TODO: Add something here, preferably make use of Controller/Action variables
+                    }
+                    count++;
                 }
-                count++;
             }
         }
         else
@@ -70,3 +135,5 @@
 
     </div>
 </div>
+
+@Html.Partial("_LoginModal", Model.CurrentUserViewModel)
