--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -457,7 +457,7 @@
 
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
-            <input class="form-control" id="updatePortfolio" type="submit" value="Update Professional Portfolio">
+            <input class="form-control btn btn-success" id="updatePortfolio" type="submit" value="Update Professional Portfolio">
         </div>
     </div>
 
