--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -1,5 +1,5 @@
 ﻿@model devinmajordotcom.ViewModels.MainLandingPageViewModel
-<div style="display:none;" class="inner cover" id="server">
+<div style="display:none;background-color:#0B1C1E;" class="inner cover" id="server">
 
     @*<h1 class="cover-heading">This is My Server...</h1>
     <p class="lead" style="color: #71cef5;">Watch the live feed of statistics below, and marvel at the beauty of my server.</p>*@
