--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -2,6 +2,48 @@
  * Globals
  */
 
+.card {
+  background: rgba(255,255,255,0.1);
+  border:1px solid white;
+  border-radius: 6px;
+  display: inline-block;
+  min-height: 300px;
+  margin: 1rem;
+  position: relative;
+  width: 300px;
+  padding:2rem;
+}
+
+.card-1:hover, .card-2:hover, .card-3:hover, .card-4:hover, .card-5:hover {
+  box-shadow: 0 0px 28px rgba(113, 206, 245,.25), 0 15px 20px rgba(113, 206, 245,0.22);
+}
+
+.card-1 {
+  box-shadow: 0 1px 3px rgba(255,255,255,0.12), 0 1px 2px rgba(255,255,255,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-2 {
+  box-shadow: 0 0px 16px rgba(113, 206, 245,0.16), 0 3px 6px rgba(113, 206, 245,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-3 {
+  box-shadow: 0 10px 20px rgba(255,255,255,0.19), 0 6px 6px rgba(255,255,255,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-4 {
+  box-shadow: 0 14px 28px rgba(255,255,255,0.25), 0 10px 10px rgba(255,255,255,0.22);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-5 {
+  box-shadow: 0 19px 38px rgba(255,255,255,0.30), 0 15px 12px rgba(255,255,255,0.22);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+
 .bootstrap-datetimepicker-widget.dropdown-menu {
   background-color: #30363b;
   border-color: #2b3135;
