--- a/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
+++ b/devinmajordotcom/Views/Home/_ApplicationManager.cshtml
@@ -24,7 +24,7 @@
                 @foreach (var appDataModel in Model.LandingPageApplicationLinks)
                 {
 
-                    <div class="appContainer work-wrapper" id="@appDataModel.DisplayName">
+                    <div class="appContainer work-wrapper" style="background:transparent;" id="@appDataModel.DisplayName">
                         <h3>@appDataModel.DisplayName</h3>
                         <hr>
                         <div class="settingsContainer">
