--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -3,7 +3,14 @@
  */
 
 .card {
-  background: rgba(255,255,255,0.1);
+  /*background: rgba(255,255,255,0.1);*/
+      background: -moz-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(0,128,128,1)), color-stop(100%, rgba(11,28,30,1)));
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: -o-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: -ms-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: radial-gradient(ellipse at center, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#008080', endColorstr='#0B1C1E',GradientType=1 );
   border:1px solid white;
   border-radius: 6px;
   display: inline-block;
@@ -100,12 +107,12 @@
 
 input[type="checkbox"]:checked + input[type="hidden"] + .slider,
 input[type="checkbox"]:checked + .slider {
-    background-color: #6fc067 !important;
+    background-color: #71cef5 !important;
 }
 
 input[type="checkbox"]:focus + input[type="hidden"] + .slider,
 input[type="checkbox"]:focus + .slider {
-    box-shadow: 0 0 1px #6fc067;
+    box-shadow: 0 0 1px #71cef5;
 }
 
 input[type="checkbox"]:checked + input[type="hidden"] + .slider:before,
@@ -372,7 +379,14 @@ a:hover {
   border: 1px solid #666;
   border-radius: 2px;
   text-align: center;
-  background-color:#0B1C1E;
+  /*background-color:#0B1C1E;*/
+  background: -moz-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* ff3.6+ */
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(0,128,128,1)), color-stop(100%, rgba(11,28,30,1))); /* safari4+,chrome */
+    background:-webkit-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* opera 11.10+ */
+    background: -ms-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* ie10+ */
+    background:radial-gradient(ellipse at center, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%); /* w3c */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#008080', endColorstr='#0B1C1E',GradientType=1 ); /* ie6-9 */ 
   padding: 20px 20px 20px 20px;
   -webkit-transition: all 0.6s ease-in;
           transition: all 0.6s ease-in;
@@ -441,8 +455,14 @@ body {
 
 }
 
-.panel, .panel-heading, .panel-body {
-    background-color:transparent;
+.panel, .panel-body {
+    /*background-color:transparent;*/
+    background: -moz-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(0,128,128,1)), color-stop(100%, rgba(11,28,30,1)));
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: -o-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: -ms-radial-gradient(center, ellipse cover, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
+    background: radial-gradient(ellipse at center, rgba(0,128,128,1) 0%, rgba(11,28,30,1) 100%);
 }
 
 .well {
