--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -1,5 +1,5 @@
 ﻿@model devinmajordotcom.ViewModels.MainLandingPageViewModel
-<div style="display:none;background-color:#0B1C1E;" class="inner cover" id="server">
+<div style="display:none;" class="inner cover" id="server">
 
     @*<h1 class="cover-heading">This is My Server...</h1>
     <p class="lead" style="color: #71cef5;">Watch the live feed of statistics below, and marvel at the beauty of my server.</p>*@
@@ -8,19 +8,23 @@
     <hr>
     <p style="color: #71cef5;">@Model.Config.ServerStatusDescription</p>
     <hr>
+    
+    <div style="background-color: #0B1C1E;">
+        
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="chart"><div id="cpuCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">CPU Usage</div></div>
+            </div>
+            <div class="col-sm-4">
+                <div class="chart"><div id="ramCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">RAM Usage</div></div>
+            </div>
+            <div class="col-sm-4">
+                @*<div id="tempCounter" class="performancePieChart" data-percent="0">0%</div>*@
+            </div>
+        </div>
 
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="chart"><div id="cpuCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">CPU Usage</div></div>
-        </div>
-        <div class="col-sm-4">
-            <div class="chart"><div id="ramCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">RAM Usage</div></div>
-        </div>
-        <div class="col-sm-4">
-            @*<div id="tempCounter" class="performancePieChart" data-percent="0">0%</div>*@
-        </div>
+        <div id="driveCounters"></div>
+
     </div>
-
-    <div id="driveCounters"></div>
 
 </div>
