--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model devinmajordotcom.ViewModels.MyHomeViewModel
 @{
     Layout = "../Shared/_HomeLayout.cshtml";
+    var linkCount = 1;
+    var newRowHtml = "</div><br/><div class='row'>";
 }
 
 <!-- HOME -->
@@ -33,19 +35,21 @@
 <section id="work" data-stellar-background-ratio="0.5">
     <div class="container">
         <div class="row">
-
             <div class="col-md-12 col-sm-12">
                 <div class="section-title">
                     <h2>My Favorites & Bookmarks</h2>
                     <span class="line-bar">...</span>
                 </div>
             </div>
-            
+        </div>
+        <div class="row">
+
             @foreach (var link in Model.FavoritesAndBookmarks)
             {
+
                 <div class="col-md-3 col-sm-6">
                     <div class="work-thumb">
-                        <a href="@link.URL" class="image-popup">
+                        <a href="@link.URL" target="_blank" class="">
                             <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(link.EncodedImage))" class="img-responsive" alt="Work">
                             <div class="work-info">
                                 <h3>@link.DisplayName</h3>
@@ -54,11 +58,18 @@
                         </a>
                     </div>
                 </div>
+
+                if (linkCount % 4 == 0)
+                {
+                    @Html.Raw(newRowHtml)
+                }
+
+                linkCount++;
+
             }
 
         </div>
     </div>
-    
 </section>
 
 <!-- BLOG -->
