--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using devinmajordotcom.ViewModels;
+@{
+    var userConfigViewModel = (UserConfigViewModel)ViewBag.CurrentUserConfig;
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -22,42 +26,38 @@
     </div>
 </section>
 
+@if (userConfigViewModel.ShowBanner)
+{
+    <!-- MENU -->
+    <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
+        <div class="container">
 
-<!-- MENU -->
-<section class="navbar custom-navbar navbar-fixed-top" role="navigation">
-    <div class="container">
+            <div class="navbar-header">
+                <!-- lOGO TEXT HERE -->
+                <a href="#" class="navbar-brand">MyHome</a>
+            </div>
 
-        <div class="navbar-header">
-            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon icon-bar"></span>
-                <span class="icon icon-bar"></span>
-                <span class="icon icon-bar"></span>
-            </button>
+            <!-- MENU LINKS -->
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-nav-first">
+                    <li><a href="#home" class="smoothScroll">Home</a></li>
+                    <li><a href="#work" class="smoothScroll">@userConfigViewModel.BookmarksTitle</a></li>
+                    <li><a href="#blog" class="smoothScroll">@userConfigViewModel.BlogTitle</a></li>
+                </ul>
 
-            <!-- lOGO TEXT HERE -->
-            <a href="index.html" class="navbar-brand">MyHome</a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="section-btn"><a href="#" data-toggle="modal" data-target="#modal-form">Sign in / Join</a></li>
+                </ul>
+            </div>
+
         </div>
-
-        <!-- MENU LINKS -->
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-nav-first">
-                <li><a href="#home" class="smoothScroll">Home</a></li>
-                <li><a href="#blog" class="smoothScroll">Blog & Notes</a></li>
-                <li><a href="#work" class="smoothScroll">Favorites & Bookmarks</a></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li class="section-btn"><a href="#" data-toggle="modal" data-target="#modal-form">Sign in / Join</a></li>
-            </ul>
-        </div>
-
-    </div>
-</section>
+    </section>
+}
 
 @RenderBody()
 
 <!-- SCRIPTS -->
-
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyBsVa2tZBcbxzQDgm8cmfaJ4MoVDB8xySg&sensor=true"></script>
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
 @Scripts.Render("~/bundles/modernizr")
